# libdiary

./: .gitignore  README.md  meson.build
libdiary/: libdiary.c  libdiary.h  libdiary_log.c  libdiary_log.h  meson.build
test/: build.sh  diary.py  diary_cli.py
